Agregar nombre de autor

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <input type="submit" value="Enviar">
     </form>
     <p id="formOutput"></p>
+    <p>Daniel David Padilla</p>
     <script src="script.js"></script>
 </body>
 </html>
